--- a/wiki/Homepage.wiki
+++ b/wiki/Homepage.wiki
@@ -1,3 +1,5 @@
+#summary Homepage du wiki
+
 = *Reyn Tweets* =
 
 *Reyn Tweets* est un client Twitter pour Windows, Symbian et Linux développé avec Qt.
