Edited wiki page Developpements through web user interface.

--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -1,4 +1,6 @@
+#summary Où en sont les développements de Reyn Tweets ?
 #labels Phase-Implementation
+
 = *Développement de Reyn Tweets* =
 
 Où en est Reyn Tweets ?
