Edited wiki page ArchitectureDesListesAvecQML through web user interface.

--- a/wiki/ArchitectureDesListesAvecQML.wiki
+++ b/wiki/ArchitectureDesListesAvecQML.wiki
@@ -1,4 +1,6 @@
+#summary Page sur la gestion des listes Qt côté QML dans Reyn Tweets
 #labels Architecture
+
 = Architecture des listes avec QML =
 
 Dans la vue, les listes sont des ListViews avec des ListModels derrière
