Edited wiki page LibrairiesUtilisees through web user interface.

--- a/wiki/LibrairiesUtilisees.wiki
+++ b/wiki/LibrairiesUtilisees.wiki
@@ -1,3 +1,5 @@
+#summary Liste des librairies annexes utilisées dans Reyn Tweets
+
 = Librairies utilisées par Reyn Tweets =
 
 Voici la liste des librairies utilisées par Reyn Tweets :
