Edited wiki page LibrairiesUtilisees through web user interface.

--- a/wiki/LibrairiesUtilisees.wiki
+++ b/wiki/LibrairiesUtilisees.wiki
@@ -5,3 +5,7 @@
 Voici la liste des librairies utilisées par Reyn Tweets :
   * QJSON ( http://qjson.sourceforge.net ) pour le parsage JSON des réponses de Twitter
   * twitter-text-js ( https://github.com/twitter/twitter-text-js ) pour la manipulation côté QML dees textes des tweets. La version utilisée est la 1.4.16.
+
+= Dépendances =
+
+Sur Linux, il faut que libjpeg62 soit installé.
