--- a/wiki/TwitLongerWork.wiki
+++ b/wiki/TwitLongerWork.wiki
@@ -6,10 +6,10 @@ Le service TwitLonger ( http://www.twitlonger.com/ ) sera intégré à Reyn Twee
 
 == Travail à réaliser ==
 
-  * Au niveau des Calls :
-    * Création d'un TwitLongerCalls pour wrapper l'API REST de TwitLonger.
-    * Création d'un dossier connection/calls pour y mettre tous les calls (dont le TwitLongerCalls et les ReynTwitterCalls).
-    * Modifications en conséquence dans le code.
+  * ~~Au niveau des Calls :~~
+    * ~~Création d'un TwitLongerCalls pour wrapper l'API REST de TwitLonger.~~
+    * ~~Création d'un dossier connection/calls pour y mettre tous les calls (dont le TwitLongerCalls et les ReynTwitterCalls).~~
+    * ~~Modifications en conséquence dans le code.~~
   * Au niveau des Requesters :
     * Plusieurs requesters nécessaires :
       * PostToTwitLongerRequester : poster les messages sur TwitLonger.
@@ -24,5 +24,9 @@ Le service TwitLonger ( http://www.twitlonger.com/ ) sera intégré à Reyn Twee
 
 == Travail réalisé ==
 
-  * Au niveau des Communicators :
+  * Au niveau des Calls (r411, r412) :
+    * Création d'un TwitLongerCalls pour wrapper l'API REST de TwitLonger.
+    * Création d'un dossier connection/calls pour y mettre tous les calls (dont le TwitLongerCalls et les ReynTwitterCalls).
+    * Modifications en conséquence dans le code.
+  * Au niveau des Communicators (r408, r409) :
     * Refonte du TwitterCommunicator (r409) qui donne un communicator unique pour tout le monde (Twitter, TwitLonger, futurs services ?).
