--- a/wiki/TwitLongerWork.wiki
+++ b/wiki/TwitLongerWork.wiki
@@ -15,7 +15,7 @@ Le service TwitLonger ( http://www.twitlonger.com/ ) sera intégré à Reyn Twee
       * PostToTwitLongerRequester : poster les messages sur TwitLonger.
       * CallbackIDRequester : pour màj le message avec son ID Twitter
       * ReadMessageRequester : pour lire un message
-    * TwitLonger renvoie des réponses au format XML -> Création d'un parser XML.
+    * ~~TwitLonger renvoie des réponses au format XML -> Création d'un parser XML.~~
   * ~~Au niveau des Communicators :~~
     * ~~Rien dans le header a priori. Il faudra donc faire une hiérarchisation côté communicators (issue 74). En profiter pour y faire les quelques revues déjà notées (issue 24, issue 25, issue 34)~~
     * ~~Modifications en conséquence dans le code.~~
@@ -28,5 +28,7 @@ Le service TwitLonger ( http://www.twitlonger.com/ ) sera intégré à Reyn Twee
     * Création d'un TwitLongerCalls pour wrapper l'API REST de TwitLonger.
     * Création d'un dossier connection/calls pour y mettre tous les calls (dont le TwitLongerCalls et les ReynTwitterCalls).
     * Modifications en conséquence dans le code.
+  * Au niveau des Requesters :
+    * TwitLonger renvoie des réponses au format XML -> Création d'un parser XML (r414).
   * Au niveau des Communicators (r408, r409) :
     * Refonte du TwitterCommunicator (r409) qui donne un communicator unique pour tout le monde (Twitter, TwitLonger, futurs services ?).
