--- a/wiki/TwitLongerWork.wiki
+++ b/wiki/TwitLongerWork.wiki
@@ -6,7 +6,7 @@ Le service TwitLonger ( http://www.twitlonger.com/ ) sera intégré à Reyn Twee
 
 == Travail à réaliser ==
 
-  * ~~Au niveau des Calls :~~
+  * Au niveau des Calls :
     * ~~Création d'un TwitLongerCalls pour wrapper l'API REST de TwitLonger.~~
     * ~~Création d'un dossier connection/calls pour y mettre tous les calls (dont le TwitLongerCalls et les ReynTwitterCalls).~~
     * ~~Modifications en conséquence dans le code.~~
@@ -16,11 +16,11 @@ Le service TwitLonger ( http://www.twitlonger.com/ ) sera intégré à Reyn Twee
       * CallbackIDRequester : pour màj le message avec son ID Twitter
       * ReadMessageRequester : pour lire un message
     * ~~TwitLonger renvoie des réponses au format XML -> Création d'un parser XML.~~
-  * ~~Au niveau des Communicators :~~
+  * Au niveau des Communicators :
     * ~~Rien dans le header a priori. Il faudra donc faire une hiérarchisation côté communicators (issue 74). En profiter pour y faire les quelques revues déjà notées (issue 24, issue 25, issue 34)~~
     * ~~Modifications en conséquence dans le code.~~
   * Autres :
-    * Réfléchir à l'intégration de l'API Key dans l'appli (issue 75).
+    * ~~Réfléchir à l'intégration de l'API Key dans l'appli (issue 75).~~
 
 == Travail réalisé ==
 
@@ -32,3 +32,5 @@ Le service TwitLonger ( http://www.twitlonger.com/ ) sera intégré à Reyn Twee
     * TwitLonger renvoie des réponses au format XML -> Création d'un parser XML (r414).
   * Au niveau des Communicators (r408, r409) :
     * Refonte du TwitterCommunicator (r409) qui donne un communicator unique pour tout le monde (Twitter, TwitLonger, futurs services ?).
+  * Autres :
+    * Réfléchir à l'intégration de l'API Key dans l'appli (issue 75).
