--- a/wiki/Developpements.wiki
+++ b/wiki/Developpements.wiki
@@ -62,6 +62,7 @@ Où en est Reyn Tweets ?
       * Création de tarballs
       * Créations de binaires : .deb (perfectible).
   * Release d'une 0.1 alpha 1 (0.1) et d'une 0.1 alpha 2 (0.2).
+  * Passage à la stupide et controversée API 1.1 de Twitter.
 
 
 == Ce qui reste à faire ==
